[tool.poetry]
name = "tai-e-submitter"
version = "0.1.0"
description = ""
authors = ["NintenSAGA <ziyuetan@outlook.com>"]
readme = "README.md"
packages = [{include = "tai_e_submitter"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
